# service

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
main/: admin.py  forms.py  models.py  urls.py  views.py
main/dash_apps/: app1.py
main/templates/dashreporting/: dash.html
main/templates/main/: base.html  home.html
main/templates/main/crud/: application_detail.html  application_list.html  applications.html  contract_detail.html  contract_list.html  contracts.html  create_application.html  create_contract.html
main/templates/registration/: login.html  signup.html
media/uploads/: 1111.xlsx  Лист_Microsoft_Excel.xlsx  Результаты_контрольной_работы_306.xlsx
service/: settings.py  urls.py
static/css/: style.css
