[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Peter1811 <78861235+Peter1811@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
