[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Peter1811 <78861235+Peter1811@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "service"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django = "^4.2"
psycopg2 = "^2.9.6"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
django-plotly-dash = "^2.2.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
scipy = "^1.10.1"
seaborn = "^0.12.2"
importlib-resources = "^5.12.0"
zipp = "^3.15.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
